--- a/_source/assets/scss/structure.scss
+++ b/_source/assets/scss/structure.scss
@@ -108,18 +108,29 @@ nav {
   }
 
   .links {
-    display: block;
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     margin: 0;
     padding: 0;
+
+    @media (min-width: $large-screen) {
+      display: block;
+    }
+
     li {
       color: #000;
       display: block;
       font-size: 1.25rem;
       font-weight: 700;
       line-height: 1.5rem;
-      margin-bottom: 0.75rem;
+      margin-bottom: 0;
       overflow: hidden;
+      white-space: nowrap;
+
+      @media (min-width: $large-screen) {
+        margin-bottom: 0.75rem;
+      }
 
       &:last-child {
         margin-bottom: 0;
@@ -129,6 +140,7 @@ nav {
         background: #5bab7d;
         border-radius: 100%;
         color: #fff;
+        display: none;
         float: left;
         font-size: 1rem;
         height: 1.5rem;
@@ -137,6 +149,10 @@ nav {
         position: relative;
         text-align: center;
         width: 1.5rem;
+
+        @media (min-width: $large-screen) {
+          display: block;
+        }
 
         &:before {
           position: relative;
@@ -333,6 +349,10 @@ nav {
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .projects-main .pretty-thumbnail {
